--- a/Spring-Project/src/main/resources/static/css/categoryPost.css
+++ b/Spring-Project/src/main/resources/static/css/categoryPost.css
@@ -1,8 +1,3 @@
-html, body {
-    height: 100%;
-    margin: 0;
-}
-
 .page-container {
     display: flex;
     flex-direction: column;
@@ -17,6 +12,22 @@ main {
     font-size: 36px;
     font-weight: bold;
     text-align: center;
+}
+
+.search {
+    margin-left: 350px;
+}
+
+.search-text {
+    width: 315px;
+    font-size: 20px;
+    border: none;
+    border-bottom: 1px solid #ddd;
+}
+
+.write-button {
+    margin-left: 1480px;
+    margin-bottom: 0;
 }
 
 .category-list-container {
