--- a/Spring-Project/src/main/resources/static/css/main.css
+++ b/Spring-Project/src/main/resources/static/css/main.css
@@ -1,5 +1,4 @@
 body {
-    margin: 0;
     padding: 0;
     background-color: #ffffff;
 }
@@ -54,12 +53,15 @@ main {
 .category-slider {
     position: relative;
     overflow: hidden;
-    width: 100%;
+    /*width: 100%;*/
+    width: 1000px;
+
+    margin-left: 100px; /* 새로 추가 */
 }
 
 .category-item-slider {
     overflow: hidden;
-    width: calc(33% * 3.4);
+    /*width: calc(33% * 3.4);*/
 }
 
 .category-items {
@@ -70,23 +72,25 @@ main {
 
 .category-item {
     flex: 0 0 auto;
-    width: calc((100% - 30px) / 4); /* 4개 아이템이 한 화면에 들어가도록 설정 */
+    width: calc((100% - 30px - 160px) / 4); /* 4개 아이템이 한 화면에 들어가도록 설정 */
     margin-right: 0; /* margin-right 제거 */
 }
 
 .slider-arrow {
     position: absolute;
-    top: 50%;
-    transform: translateY(-50%);
+    /*top: 50%;*/
+    transform: translateY(-150%);
     z-index: 1;
 }
 
 .slider-arrow.left {
-    left: 10px;
+    /*left: 10px;*/
+    left: 500px;
 }
 
 .slider-arrow.right {
-    right: 10px;
+    /*right: 10px;*/
+    right: 500px;
 }
 
 .category-item.card {
