--- a/Spring-Project/src/main/resources/static/css/viewPost.css
+++ b/Spring-Project/src/main/resources/static/css/viewPost.css
@@ -1,6 +1,8 @@
 body {
     display: flex;
     flex-direction: column;
+    /*알수 없는이유로  body vcs margin 8px가 생김... 해당부분 없애는 코드 적용*/
+    margin: 0;
 }
 
 main {
@@ -8,25 +10,9 @@ main {
     margin-right: 150px;
 }
 
-.go-back {
-    align-self: flex-start;
-    background-color: #CD31AB;
-    color: white;
-    padding: 5px 15px;
-    border-radius: 20px;
-    text-decoration: none;
-    font-size: 14px;
-    margin-bottom: 20px;
-}
-
 form {
     display: flex;
-    flex-wrap: wrap;
     flex-direction: row;
-    margin-bottom: 50px;
-    gap: 50px;
-    padding-left: 300px;
-    padding-right: 300px;
 }
 
 input {
@@ -54,69 +40,74 @@ textarea {
     vertical-align: middle;
 }
 
-.back-button-container {
-    display: flex;
-    justify-content: start;
-}
-
-.back-button {
-    font-size: 16px;
-    border-radius: 32px;
-    padding: 8px 16px;
-    margin: 30px;
-    background-color: #CD31AB;
-    color: white;
-    width: 150px;
-    align-items: center;
-}
-
 .post-container {
     display: flex;
     align-items: center;
     flex-direction: column;
 }
 
-/*게시판 제목 및 내용 가운데 정렬 추가*/
+.admin-notice-container {
+    width: 750px;
+}
+
 .post-container h1 {
     text-align: center;
     width: 100%;
 }
+
 .post-container .content {
-    text-align: center;
+    margin-top: 50px;
+    margin-bottom: 100px;
+    white-space: pre-wrap;
+    word-break: break-word;
+}
+
+.post-container .user-post-container {
+    width: 750px;
 }
 
 .icon {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     justify-content: center;
-    margin-left: 150px;
-    margin-bottom: 100px;
+    align-items: center;
 }
 
 .icon-img {
+    justify-content: center;
     width: 250px;
     height: 250px;
+    margin-bottom: 50px;
+}
+
+.edit-delete-container {
+
+    display: flex;
+    align-items: center;
+    margin-bottom: 50px;
+}
+
+.delete-form {
+    width: 85px;
+    height: 50px;
 }
 
 .icon-img-add-button {
     width: 80px;
     height: 50px;
-    margin-left: 50px;
-    margin-top: 200px;
     align-items: center;
-    line-height: 45px;
+    margin-right: 100px;
 }
+
 
 .user-information {
     display: flex;
     flex-direction: row;
-    gap: 340px;
+    justify-content: space-between;
     /*게시글 작성정보 유저,시간 위치이동*/
-    margin-left: 150px;
 }
 
 .user-information div {
-    width: 200px;
     word-break: break-all;
 }
 
@@ -254,7 +245,8 @@ textarea {
 .comment-button-container {
     display: flex;
     justify-content: center;
-    margin-top: 10px;
+    margin-top: 30px;
+    margin-bottom: 50px;
 }
 
 .comment-button {
@@ -266,6 +258,7 @@ textarea {
     border: none;
     cursor: pointer;
 }
+
 /*별점관련*/
 .star {
     cursor: pointer;
