fix: 권한 변경에 따른 글쓰기 버튼 유무 수정
기존의 model 사용 구조 -> Security 권한으로 바로 설정

UserService 받아오는 메서드 추가

Issue: #48

--- a/Spring-Project/src/main/resources/templates/categoryPost.html
+++ b/Spring-Project/src/main/resources/templates/categoryPost.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org" lang="ko">
+<html xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.w3.org/1999/xhtml" lang="ko">
 <head>
     <meta charset="UTF-8">
     <title>CategoryPost</title>
@@ -47,7 +47,9 @@
                    placeholder="Input your keyword for searching ..." onkeypress="if (event.keyCode===13) {form.submit()}">
         </form>
 
-        <button class="write-button" th:onclick="|location.href='@{/v1/posts/write}'|">글쓰기</button>
+        <button class="write-button"
+                sec:authorize="hasAnyRole('ROLE_USER', 'ROLE_ADMIN')"
+                th:onclick="|location.href='@{/v1/posts/write}'|">글쓰기</button>
 
         <div class="category-list-container">
             <select class="category-list" name="categoryId"
