fix: 모든 링크 밑줄 제거, 사진이 없는 게시글은 placeholder 적용

--- a/Spring-Project/src/main/resources/static/css/common.css
+++ b/Spring-Project/src/main/resources/static/css/common.css
@@ -2,6 +2,11 @@
     font-family: Arial, sans-serif;
 }
 
+a {
+    text-decoration-line: none;
+    color: black;
+}
+
 body {
     height: 100%;
     margin: 0;
