--- a/Spring-Project/src/main/resources/templates/editPost.html
+++ b/Spring-Project/src/main/resources/templates/editPost.html
@@ -33,7 +33,8 @@
     <section class="post-container">
         <form th:action="${type == 'notice'} ? @{/v1/posts/notice/{id}/edit(id=${board.id})} : @{/v1/posts/post/{id}/edit(id=${board.id})}" th:object="${board}" class="input" method="post" enctype="multipart/form-data">
             <div th:if="${board.getType().equals('post')}" class="icon">
-                <img id="preview" class="icon-img" th:src="'data:image;base64,'+${image}">
+                <img th:if="${!image.isEmpty()}" id="preview" class="icon-img" th:src="'data:image;base64,'+${image}">
+                <img th:if="${image.isEmpty()}" class="icon-img" src="/images/img-place-holder.png">
                 <input type="file" id="file" name="file" class="icon-img-add-button" accept="image/*">
             </div>
             <input type="hidden" name="_method" value="put"/>
